--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>Media Crop</title>
+    <title>Dragon Fight!</title>
     <link rel="stylesheet" type="text/css" href="/CSS/styles.css"></link>
-    <script type="text/javascript" src="http://code.angularjs.org/1.2.13/angular.js"></script>
+    <script type="text/javascript" src="/JS/app.libs.js"></script>
     <script type="text/javascript" src="/JS/app.min.js"></script>
 </head>
 
@@ -38,13 +38,21 @@
 	        		<div class="action-button" ng-click="attack()">Attack</div>
 	        		<div class="action-button" ng-click="blast()">Blast</div>
 	        		<div class="action-button" ng-click="heal()">Heal</div>
-	        		<div class="action-button" ng-click="reset('player')">Give Up</div>
+	        		<div class="action-button" ng-click="giveUp()">Give Up</div>
 	        	</div>
 	        	<div class="logo">
 	        		<img src="/IMG/logo.png">
 	        	</div>
 	        	<div class="comentry-wrapper">
-	        		<div class="comentry" ng-repeat="commentry in commentryList track by $index">{{commentry}}</div>
+	        		<div ng-if="!commentryList.length" class="commentry-fallback">No Comments to show</div>
+	        		<div ng-if="commentryList.length" class="comentry-title">Commentary</div>
+					<div ng-if="commentryList.length" class="comments">
+	        			<div class="comment" ng-repeat="commentry in commentryList track by $index">
+	        				<div class="u-ib date" ng-if="commentry.time">{{commentry.time | date : 'HH:mm:ss'}}</div>
+	        				<div class="u-ib" ng-if="commentry.time">{{commentry.comment}}</div>
+	        				<div class="revert u-text-center" ng-if="!commentry.time">{{commentry.comment}}</div>
+	        			</div>
+	        		</div>
 	        	</div>
 	        </div>
 	    </div>
