--- a/HTML/DragonFight/index.html
+++ b/HTML/DragonFight/index.html
@@ -33,7 +33,7 @@
 	        		<button class="action-button" ng-click="giveUp()">{{isForcedClose ? 'Result' : 'Give Up'}}</button>
 	        	</div>
 	        	<div class="logo">
-	        		<img src="/IMG/logo.png">
+	        		<img src="/IMG/DragonFight/logo.png">
 	        	</div>
 	        	<div class="comentry-wrapper">
 	        		<div ng-if="!commentryList.length" class="commentry-fallback">No Comments to show</div>
